@@ -37,6 +37,7 @@ Changes in 3.2rc1 :
 - Improved usability of QM gui by decoupling user controlled property from priority 
 - UPnP code now sends User-Agent property in HTTP header
 - Make sure UPnP does not take exclusive control of UDP port 1900 (179570)
+- Ask to create data files if new location selected in missing files dialog does not contain files (178948)
 
 Changes in 3.2beta1 :
 - Ask to create directory in fileselectdlg, if it does not exist (163965)
